--- a/package.json
+++ b/package.json
@@ -58,11 +58,14 @@
   },
   "dependencies": {
     "awe-dnd": "^0.3.1",
-    "vue": "^2.5.16",
     "axios": "^0.18.0",
     "cross-spawn": "^6.0.5",
     "element-ui": "^2.4.6",
+    "iview": "^3.1.1",
     "json-templater": "^1.2.0",
+    "mint-ui": "^2.2.13",
+    "pretty": "^2.0.0",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
