--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pretty": "^2.0.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
